# test-build-system

./: CMakeLists.txt
IntegrationTest/: CMakeLists.txt  Main.cpp
Tests/: Tests.cpp
cmake/: TestLibConfig.cmake.in
profiles/host/: emscripten
